--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -585,6 +585,28 @@
 		<!-- These properties are included in the properties-service.xml via a xsl transformation -->
 		<jboss.property.1>pubman.properties.file=./pubman.properties</jboss.property.1>
 		<jboss.property.2>com.sun.xml.namespace.QName.useCompatibleSerialVersionUID=1.0</jboss.property.2>
+		
+		<!-- version of the common_services dependencies -->
+		<version.aa_logic>0.2.8-SNAPSHOT</version.aa_logic>
+		<version.aa_presentation>0.2.8-SNAPSHOT</version.aa_presentation>
+		<version.citationmanager>1.0.75-SNAPSHOT</version.citationmanager>
+		<version.common_logic>1.1.70-SNAPSHOT</version.common_logic>
+		<version.common_presentation>1.0.59-SNAPSHOT</version.common_presentation>
+		<version.cone>1.2.30-SNAPSHOT</version.cone>
+		<version.cone_presentation>1.2.30-SNAPSHOT</version.cone_presentation>
+		<version.dataacquisition>1.0.66-SNAPSHOT</version.dataacquisition>
+		<version.dataacquisition_presentation>1.0.66-SNAPSHOT</version.dataacquisition_presentation>
+		<version.framework_access>1.3.15-SNAPSHOT</version.framework_access>
+		<version.pid_cache_presentation>0.1.33-SNAPSHOT</version.pid_cache_presentation>
+		<version.search>1.1.4-SNAPSHOT</version.search>
+		<version.search_presentation>1.1.4-SNAPSHOT</version.search_presentation>
+		<version.structuredexportmanager>1.0.73-SNAPSHOT</version.structuredexportmanager>
+		<version.sword_presentation>1.0.48-SNAPSHOT</version.sword_presentation>
+		<version.syndication_presentation>1.0.54-SNAPSHOT</version.syndication_presentation>
+		<version.transformation>1.0.58-SNAPSHOT</version.transformation>
+		<version.validation>1.0.77-SNAPSHOT</version.validation>
+		<version.validation_presentation>1.0.77-SNAPSHOT</version.validation_presentation>
+		
 		<!-- Flag to disable the GUI-entry points for UC_PM_SR_03 do advanced search -->
 		<escidoc.pubman_presentation.disable.advanced_search>false</escidoc.pubman_presentation.disable.advanced_search>
 		<escidoc.pubman_presentation.disable.export>false</escidoc.pubman_presentation.disable.export>
