--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -470,83 +470,83 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.3.15-SNAPSHOT</version>
+			<version>${version.framework_access}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.70-SNAPSHOT</version>
+			<version>${version.common_logic}</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.75-SNAPSHOT</version>
+			<version>${version.citationmanager}</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition</artifactId>
-			<version>1.0.66-SNAPSHOT</version>
+			<version>${version.dataacquisition}</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.73-SNAPSHOT</version>
+			<version>${version.structuredexportmanager}</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation</artifactId>
-			<version>1.0.77-SNAPSHOT</version>
+			<version>${version.validation}</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation_presentation</artifactId>
-			<version>1.0.77-SNAPSHOT</version>
+			<version>${version.validation_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone_presentation</artifactId>
-			<version>1.2.30-SNAPSHOT</version>
+			<version>${version.cone_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition_presentation</artifactId>
-			<version>1.0.66-SNAPSHOT</version>
+	 	<version>${version.dataacquisition_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.58-SNAPSHOT</version>
+			<version>${version.transformation}</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>aa_presentation</artifactId>
-			<version>0.2.8-SNAPSHOT</version>
+			<version>${version.aa_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>aa_logic</artifactId>
-			<version>0.2.8-SNAPSHOT</version>
+			<version>${version.aa_logic}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -558,21 +558,21 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
+			<version>${version.search}</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search_presentation</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
+			<version>${version.search_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>syndication_presentation</artifactId>
-			<version>1.0.54-SNAPSHOT</version>
+			<version>${version.syndication_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
@@ -593,28 +593,28 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>sword_presentation</artifactId>
-			<version>1.0.48-SNAPSHOT</version>
+			<version>${version.sword_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone</artifactId>
-			<version>1.2.30-SNAPSHOT</version>
+			<version>${version.cone}</version>
 			<scope>compile</scope>
 			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>pid_cache_presentation</artifactId>
-			<version>0.1.33-SNAPSHOT</version>
+			<version>${version.pid_cache_presentation}</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_presentation</artifactId>
-			<version>1.0.59-SNAPSHOT</version>
+			<version>${version.common_presentation}</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
