--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -206,7 +206,7 @@
 					<dependency>
 						<groupId>org.codehaus.izpack</groupId>
 						<artifactId>izpack-standalone-compiler</artifactId>
-						<version>${izpack-standalone.version}</version>
+						<version>${version.izpack-standalone}</version>
 					</dependency>
 				</dependencies>
 				<configuration>
@@ -285,7 +285,7 @@
 	
 	<properties>
 		<staging.dir>${project.build.directory}/staging</staging.dir>
-		<izpack-standalone.version>4.3.0</izpack-standalone.version>
+		<version.izpack-standalone>4.3.0</version.izpack-standalone>
 		<escidoc.search.and.export.default.sql.query>escidoc.metadata=test</escidoc.search.and.export.default.sql.query>
 	</properties>
 	<!--  
@@ -364,31 +364,31 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation_presentation</artifactId>
-			<version>1.0.77-SNAPSHOT</version>
+			<version>${version.validation_presentation}</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.3.15-SNAPSHOT</version>
+			<version>${version.framework_access}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone</artifactId>
-			<version>1.2.30-SNAPSHOT</version>
+			<version>${version.cone}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.70-SNAPSHOT</version>
+			<version>${version.common_logic}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.izpack</groupId>
 			<artifactId>izpack-standalone-compiler</artifactId>
-			<version>${izpack-standalone.version}</version>
+			<version>${version.izpack-standalone}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -399,7 +399,7 @@
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>8.3-604.jdbc3</version>
+			<version>9.0-801.jdbc4</version>
 			<scope>compile</scope>
 		</dependency>
 	
