--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -22,19 +22,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.70-SNAPSHOT</version>
+		<version>1.0.70</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>dataacquisition</artifactId>
 	<name>dataacquisition</name>
 	<packaging>ejb</packaging>
-	<version>1.0.66-SNAPSHOT</version>
+	<version>1.0.66</version>
 
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/dataacquisition</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/dataacquisition</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.70/dataacquisition</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.70/dataacquisition</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.70/dataacquisition</url>
 	</scm>
 
 	<build>
@@ -168,7 +168,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.58-SNAPSHOT</version>
+			<version>1.0.58</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
