--- a/common_services/exportmanager/pom.xml
+++ b/common_services/exportmanager/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.70-SNAPSHOT</version>
+		<version>1.0.70</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>exportmanager</artifactId>
     <name>exportmanager</name>
 	<packaging>ejb</packaging>
-	<version>1.0.69-SNAPSHOT</version>
+	<version>1.0.69</version>
 
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/exportmanager</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/exportmanager</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.70/exportmanager</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.70/exportmanager</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.70/exportmanager</url>
 	</scm>
 
 	<build>
@@ -87,13 +87,13 @@
 		<dependency> 
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.75-SNAPSHOT</version>
+			<version>1.0.75</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency> 
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.73-SNAPSHOT</version>
+			<version>1.0.73</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -110,7 +110,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.3.15-SNAPSHOT</version>
+			<version>1.3.15</version>
 		</dependency>
 		<dependency>
 			<groupId>jetty</groupId>
